@@ -1,3 +1,8 @@
+2009-07-26  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb, lib/gluon/rs.rb: request-response
+	context and controller hooks.
+
 2009-07-21  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/cmap.rb: class-URL mapping.
